--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
 
-pbr!=2.1.0,>=2.0.0 # Apache-2.0
+pbr>=2.0.0,!=2.1.0
 Babel!=2.4.0,>=2.3.4 # BSD
 decorator>=3.4.0 # BSD
 enum34;python_version=='2.7' or python_version=='2.6' or python_version=='3.3' # BSD
@@ -49,6 +49,7 @@ taskflow>=2.7.0 # Apache-2.0
 rtslib-fb!=2.1.60,!=2.1.61,>=2.1.43 # Apache-2.0
 simplejson>=2.2.0 # MIT
 six>=1.9.0 # MIT
+sphinx>=1.5.1,!=1.6.1
 SQLAlchemy!=1.1.5,!=1.1.6,!=1.1.7,!=1.1.8,>=1.0.10 # MIT
 sqlalchemy-migrate>=0.11.0 # Apache-2.0
 stevedore>=1.20.0 # Apache-2.0
