--- a/setup.cfg
+++ b/setup.cfg
@@ -12,9 +12,6 @@ classifier =
     Intended Audience :: System Administrators
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
-    Programming Language :: Python
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
 
 [global]
 setup-hooks =
@@ -77,6 +74,7 @@ tempest.test_plugins =
 all_files = 1
 build-dir = doc/build
 source-dir = doc/source
+builders = html
 
 [egg_info]
 tag_build =
